; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/pci/extr_early.c_write_pci_config_byte.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/pci/extr_early.c_write_pci_config_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"%x writing to %x: %x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @write_pci_config_byte(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %9, align 4
  %13 = load i32, i32* %10, align 4
  %14 = call i32 @pr_debug(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %12, i32 %13)
  %15 = load i32, i32* %6, align 4
  %16 = shl i32 %15, 16
  %17 = or i32 -2147483648, %16
  %18 = load i32, i32* %7, align 4
  %19 = shl i32 %18, 11
  %20 = or i32 %17, %19
  %21 = load i32, i32* %8, align 4
  %22 = shl i32 %21, 8
  %23 = or i32 %20, %22
  %24 = load i32, i32* %9, align 4
  %25 = or i32 %23, %24
  %26 = call i32 @outl(i32 %25, i32 3320)
  %27 = load i32, i32* %10, align 4
  %28 = load i32, i32* %9, align 4
  %29 = and i32 %28, 3
  %30 = add nsw i32 3324, %29
  %31 = call i32 @outb(i32 %27, i32 %30)
  ret void
}

declare dso_local i32 @pr_debug(i8*, i32, i32, i32) #1

declare dso_local i32 @outl(i32, i32) #1

declare dso_local i32 @outb(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
